--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,16 @@
-
 @import './shared/fonts';
+@import './index';
 * {
 	font-family: 'Montserrat', 'Helvetica', sans-serif;
+}
+html,
+body {
+	height: 100%;
+	width: 100%;
+}
+.self-typed {
+	font-size: 31px;
+	font-weight: bold;
+	letter-spacing: 2px;
+	color: #fff;
 }
